Added tagging system, bug: show all tags for all users

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -4,6 +4,9 @@
   <div class="form-inputs">
     <%= f.input :content %>
   </div>
+  <p>
+    <%= f.text_field :tag_list %>
+	</p>
 
   <div class="form-actions">
     <%= f.button :submit %>
