--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Tags</h1>
-<%= render @tags %>
+
+<% @tags.each do |tag| %>
+   		<% @tag_counts.each do |_id, _count| 
+   	    	if tag.id == _id && _count > 0 %>
+   			  <%= tag.name %>
+     	<% end
+     		end %>
+<%end %>
