--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,6 +3,8 @@
 <p>
   <strong>Content:</strong>
   <%= @task.content %>
+  <%= @task.due %>
+  <%= @distance %>
   <div><%= render @task.tags %></div>
 </p>
 
