--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,11 +11,12 @@
   </thead>
 
   <tbody>
-    <% @tasks.each do |task| %>
+    <% @open.each do |task| %>
       <tr>
         <td><%= task.content %></td>
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
+        <td><%= link_to 'Done', change_task_path(task, state: 'done'), method: :put %>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
