fixed 'open' state

--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,4 +1,4 @@
- <% @tasks.each do |task| %>
+ <% @open.each do |task| %>
       <tr>
         <td><%= task.content %></td>
         <td><%= link_to 'Show', task %></td>
