--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -3,7 +3,7 @@
 <% @tags.each do |tag| %>
    		<% @tag_counts.each do |_id, _count| 
    	    	if tag.id == _id && _count > 0 %>
-   			  <%= tag.name %>
+   			  <%= link_to tag.name, tag_path(tag)%>
      	<% end
      		end %>
 <%end %>
