--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,12 @@
-<nav>  
-  <div class="nav-wrapper"> 
-    <%= link_to 'AList', root_path, class: "brand-logo" %> <ul id="nav-mobile" class="right"> 
-
-    <% if current_user %>
-      <li><%= link_to 'Edit', edit_user_registration_path %></li>
-      <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete  %></li> 
-
-    <% else %>
-      <li><%= link_to 'Sign in', new_user_session_path %></li> 
-    <% end %> 
-   </ul> 
-  </div> 
-</nav>  
+<div class="navbar-fixed">
+    <nav>
+      <div class="nav-wrapper green accent-3">
+        <a href="#!" class="brand-logo">Logo</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="sass.html">Sass</a></li>
+          <li><a href="badges.html">Components</a></li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+        
