--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,10 +3,12 @@
       <div class="nav-wrapper green accent-3">
         <a href="#!" class="brand-logo">Logo</a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
+          
+          
         </ul>
       </div>
     </nav>
   </div>
-        
+
+<script src="/assets/javascripts/keymaster.js"></script>
+<script> key('a', function(){ alert('you pressed a!') }); </script>
