--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,6 @@
   <body>
   	<%= render 'layouts/header' %>
     <%= yield %>
-    <p class="notice"><%= notice %></p><br><p class="alert"><%= alert %></p>
+   <!-- <p class="notice"><%= notice %></p><br><p class="alert"><%= alert %></p> -->
   </body>
 </html>
