can move to next text field by enter, add hotkey

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,13 +2,7 @@
     <nav>
       <div class="nav-wrapper green accent-3">
         <a href="#!" class="brand-logo">Logo</a>
-        <ul class="right hide-on-med-and-down">
-          
-          
-        </ul>
+        <ul class="right hide-on-med-and-down"></ul>
       </div>
     </nav>
   </div>
-
-<script src="/assets/javascripts/keymaster.js"></script>
-<script> key('a', function(){ alert('you pressed a!') }); </script>
