--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -51,4 +51,10 @@
       </tbody>
     </table>
    </div>
+
+
+<script src="/assets/javascripts/keymaster.js"></script>
+<script> key('alt+t', function(){ }); </script>
+
 </div>
+
