--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -54,7 +54,9 @@
 
 
 <script src="/assets/javascripts/keymaster.js"></script>
-<script> key('alt+t', function(){ }); </script>
+<script> key('a', function(){
+  document.getElementById("new_link").click();
+ }); </script>
 
 </div>
 
