--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,7 +1,6 @@
-<%= div_for task do %>
 
-  <h3><%= task.content %></h3>
-
+<%= div_for @task do %>
+  <h3><%= @task.content %></h3>
   <ul>
    <li><%= link_to "Edit Task", new_task_path, remote: true %></li>
    <li><%= link_to "Delete Task", task, remote: true, method: :delete %></li>
