--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -44,17 +44,15 @@
             <td><%= task.content %></td>
             <td><%= link_to 'Show', task %></td>
             <td><%= link_to 'Edit', edit_task_path(task) %></td>
-            <td><%= link_to 'Done', change_task_path(task, state: 'done'), method: :put %>
-            <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Done', change_task_path(task, state: 'done'), remote: true, method: :put %>
+            <td><%= link_to 'Destroy', task, method: :delete, remote:true, data: { confirm: 'Are you sure? This action is irreversible.' } %></td>
           </tr>
         <% end %>
       </tbody>
     </table>
-   </div>
-
 
 <script src="/assets/javascripts/keymaster.js"></script>
-<script> key('a', function(){
+<script> key('n', function(){
   document.getElementById("new_link").click();
  }); </script>
 
