--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,8 +1,31 @@
+<% @d = Date.parse(Time.now.to_s)
+  if task.due.nil?  
+    @distance = "Many "                
+  else
+    @distance = task.due.mjd - @d.mjd
+  end                
+%> 
+<div class = "card">
+  <div class = "card-panel lime accent-1">
+    <span style="float: left;">
+      <%= "#{@distance} days left" %> 
+    </span>
+    <span style="float: right;">
+      <%= link_to 'see more', edit_task_path(task) %>
+    </span>
+  </div>
+  <div class = "card-content">
+    <%= task.content %>
+  </div>
+</div>
 
-<%= div_for @task do %>
-  <h3><%= @task.content %></h3>
-  <ul>
-   <li><%= link_to "Edit Task", new_task_path, remote: true %></li>
-   <li><%= link_to "Delete Task", task, remote: true, method: :delete %></li>
-  </ul>
-<% end %>
+          <!--     
+            <td>
+                <br> 
+                 
+            </td>
+            <td>
+                <%= link_to 'Done', change_task_path(task, state: 'done'), remote: true, method: :put %>
+                <%= link_to 'Destroy', task, method: :delete, remote:true, data: { confirm: 'Are you sure? This action is irreversible.' } %></td>
+          
+-->
