--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -21,7 +21,6 @@
   <%end %>
 
 </div>
-
 <div class="col s12 m8 l9"> <!-- Note that "m8 l9" was added -->
   <!-- Teal page content
 
@@ -29,27 +28,8 @@
     9-columns-wide on large screens,
     8-columns-wide on medium screens,
     12-columns-wide on small screens  --> 
-    <%= link_to 'New Task', new_task_path,  id: "new_link", remote: true%>
-    <table>
-      <thead>
-        <tr>
-          <th>Content</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @open.each do |task| %>
-          <tr>
-            <td><%= task.content %></td>
-            <td><%= link_to 'Show', task %></td>
-            <td><%= link_to 'Edit', edit_task_path(task) %></td>
-            <td><%= link_to 'Done', change_task_path(task, state: 'done'), remote: true, method: :put %>
-            <td><%= link_to 'Destroy', task, method: :delete, remote:true, data: { confirm: 'Are you sure? This action is irreversible.' } %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
+    <%= link_to 'New Task', new_task_path,  id: "new_link", remote: true%><br>
+    <%= render @open %>
 
 <script src="/assets/javascripts/keymaster.js"></script>
 <script> key('n', function(){
