--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,6 +1,10 @@
 <%= form_for @task, remote: true do |f| %>
+  <h5> Content </h5>
   <%= f.text_field :content, :autofocus => true %>
+  <h5> Deadline </h5>
   <%= f.date_field :due %>   
+  <h5> Tag </h5>
   <%= f.text_field :tag_list%> 
 	<%= f.button :submit %>
 <% end %>
+<br>
