--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -8,15 +8,21 @@
 <div class = "card">
   <div class = "card-content">
     <b> <%= "#{@distance} days left" %> </b><br>
-    <%= task.content %>
-  </div>
-   <div class = "card-action">
-    <span style="float: left;">     
+    <%= task.content %>  <br> 
+    <span style = "float : right;">
+      <div class="color: amber lighten-4 ">
+      <%task.tags.each do |tag| %>
+        <%= " #{tag.name} " %> 
+      <%end%>    
+      </div>
     </span>
-    <span style="float: right; font-size: small; color: gray">
-      <%= link_to 'Destroy', task, method: :delete, remote:true, data: { confirm: 'Are you sure? This action is irreversible.' } %>
-      <%= link_to 'see more', edit_task_path(task) %>
-      <%= link_to 'Done', change_task_path(task, state: 'done'), remote: true, method: :put %>       
+  </div>
+  <div class = "card-action">
+    <span style = "float: right; font-size: small; ">
+      <%= link_to 'delete', task, method: :delete, remote:true, data: { confirm: 'Are you sure? This action is irreversible.' } %>
+      <%= link_to 'Edit', edit_task_path(task) %>
+      <%= link_to 'Done', change_task_path(task, state: 'done'), remote: true, method: :put %>     
+
     </span>
   </div>
   
