--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -5,6 +5,8 @@
   <%= f.date_field :due %>   
   <b>  Tag </b>
   <%= f.text_field :tag_list%> 
+  <div class="form-actions">
 	<%= f.button :submit %>
+  </div>
 <% end %>
 <br>
