remove hotkey - faster + more accurate

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,11 +5,14 @@
       <div class="nav-wrapper green accent-3">
         <a class="brand-logo black-text" style = "font-weight: 400; font-style: italic; text-color: green"> STAY ORGANIZED <i class="material-icons">clear_all</i></a>  
         <ul class="right hide-on-med-and-down black-text">
-        	<% @status = Status.order("created_at").last %>
-        	<li class="chip black-text green accent-4 margin-top:15px"> <%= @status.name[0..100].gsub(/\s\w+\s*$/, '...')%> </li>
         	<% if current_user %>  
+        		<% @status = current_user.statuses.order("created_at").last %>
+        		<% if !@status.nil? %>
+        			<li class="chip black-text green accent-4 margin-top:15px"> <%= @status.name%> </li>
+        		<% end %>
         		<li><i class="material-icons">perm_identity</i></li>
         		<li><a href="/statuses/new" class="black-text">post!</a></li>
+        		<li><a href="/users/edit" class="black-text">EDIT</a></li>
         		<li><a data-method="delete" href="/users/sign_out" class="black-text">SIGN OUT</a></li>
         		<%else%>
     			<li><a href="/users/sign_in" class="black-text">SIGN IN</a></li>
