--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,5 @@
 <!-- Page Layout here -->
 <div class="row">
-
 <div class="col s12 l2"> 
   <br>
   <i class="material-icons" style="float:left">label_outline</i>  <h6 style="float:left"> <b> LABLES </b> </h6> 
@@ -13,12 +12,12 @@
         <% end
           end %>
   <%end %>
-  <br><i class="material-icons" style="float:left">view_stream</i><%= link_to ' ALL TASKS', tasks_path%> <br><br>
+  <br><i class="material-icons" style="float:left">view_stream</i><%= link_to ' CURRENT TASKS', tasks_path%> <br><br>
   <i class="material-icons" style="float:left">delete</i><%= link_to ' FINISHED TASKS', tasks_path(done: "done")%>
 </div>
 <div class="col s12 l10"> 
     <br>   
-    <div class="chip orange lighten-2"> <%= link_to 'NEW TASK (N)', new_task_path,  id: "new_link", remote: true %> </div>
+    <div class="chip orange lighten-2"> <%= link_to 'NEW TASK', new_task_path,  id: "new_link", remote: true %> </div>
     <br>
     <div class = "row">
       <div class="col s12 l5">
@@ -30,10 +29,12 @@
         <%= render @open_nodue %>
       </div>
     </div>
+<!--
 <script src="/assets/javascripts/keymaster.js"></script>
 <script> key('n', function(){
-  document.getElementById("new_link").click();
- }); </script>
-
+  document.getElementById("new_link").click(); 
+}); </script>
+-->
+</div>
 </div>
 
