add tips & feature page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,7 @@
   	<%= render 'layouts/header' %>
     <%= yield %>
     <!--  <p class="notice"> <%= notice %></p><br><p class="alert"><%= alert %></p>  -->
+    <%= render 'layouts/footer' %>
   </body>
+
 </html>
