--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,45 @@
-
-  <div class="row">  
-        <div class="col s12 m6">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">AList</span>
-             </div>
-           <div class="card-action"> <%= link_to 'Sign up', new_user_registration_path, class: "btn" %>  
-            </div> 
-          </div>
+<div class = "containter">
+<center><h1> Tips and Features...</h1></center>
+<center><h5> ...that you will love.  </h5></center>
+      <li>
+        <div class="caption center-align">
+          <h3>Everything in one place</h3>
+          <h5 class="light black-text text-lighten-3">A bird view of your busy schedule.</h5>
         </div>
-      </div>
+        <center><img src="https://s30.postimg.org/r18au9k41/full.png"></center>
+      </li>
+      <li>
+        <div class="caption center-align">
+          <h3>Label filter</h3>
+          <h5 class="light black-text text-lighten-3">Want to retrive related tasks? Assign labels for them.</h5>
+        </div>
+        <center><img src="https://s27.postimg.org/syzfsr6ur/tag.png"></center>
+      </li>
+      <li>
+        <div class="caption center-align">
+          <h3>Due and No Due</h3>
+          <h5 class="light black-text text-lighten-3">Afraid of missing your deadlines? Fret not, tasks in two-column style gives you a good view of your upcoming deadlines as well as no-due tasks from other aspects of your life such as hobbies, family, and self project.</h5>
+        </div>
+        <center><img src="https://s24.postimg.org/80y9rsujp/tasks.png"></center>
+      </li>
+      <li>
+        <div class="caption center-align">
+          <h3>Space for yourself</h3>
+          <h5 class="light black-text text-lighten-3">It can be an inspirational quote, your week focus, affirmation, or upcoming exciting event. Up to you.</h5>
+        </div>
+        <center><img src="https://s24.postimg.org/r72f7thg5/status.png"></center>
+      </li>
+      <li>
+        <div class="caption center-align">
+          <h3>Add new task fast</h3>
+          <h5 class="light black-text text-lighten-3">Don't need to switch back and forth between mouse and keyboard, you can just press Enter to move to the next field.</h5>
+        </div>
+        <center><img src="https://s27.postimg.org/icnjg9h1f/Capture.png"></center>
+      </li>  
+      <li>
+        <div class="caption center-align">
+          <h3>Ready to stay organized?</h3>
+          <a href="/tasks"> Yes, I'm excited! </a><br>
+        </div>
+      </li>      
+</div>
