--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -13,7 +13,8 @@
           end %>
   <%end %>
   <br><i class="material-icons" style="float:left">view_stream</i><%= link_to ' CURRENT TASKS', tasks_path%> <br><br>
-  <i class="material-icons" style="float:left">delete</i><%= link_to ' FINISHED TASKS', tasks_path(done: "done")%>
+  <i class="material-icons" style="float:left">delete</i><%= link_to ' FINISHED TASKS', tasks_path(done: "done")%><br><br><br>
+  <a href="pages/home"> Tips and features that you will love! </a><br>
 </div>
 <div class="col s12 l10"> 
     <br>   
